# book-recommender

./: README.md
backend/: .gitlab-ci.yml  Cargo.toml  README.md
backend/src/: auth.rs  database.rs  main.rs
frontend/: .gitlab-ci.yml  angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
frontend/src/app/components/add-book/: add-book.component.html  add-book.component.spec.ts  add-book.component.ts
frontend/src/app/components/books/: books.component.css  books.component.html  books.component.ts
frontend/src/app/components/edit-book/: edit-book.component.html  edit-book.component.spec.ts  edit-book.component.ts
frontend/src/app/components/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/components/login/: login.component.html  login.component.spec.ts  login.component.ts
frontend/src/app/components/register/: register.component.html  register.component.spec.ts  register.component.ts
frontend/src/app/services/: auth.service.ts
frontend/src/environments/: environment.development.ts  environment.ts
